# BeyondHorizon

./: .editorconfig  settings.gradle
android/: build.gradle
android/src/androidTest/java/vodka/daan/beyondhorizon/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/vodka/daan/beyondhorizon/: MainActivity.kt
android/src/main/res/values/: strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
android/src/test/java/vodka/daan/beyondhorizon/: ExampleUnitTest.kt
core/: CMakeLists.txt
core/include/: Status.hh  globals.hh  init.hh
core/include/arch/: logging.hh
core/include/filesystem/: IFileSystem.hh
core/include/logging/: ILogManager.hh
core/source/: init.cc  logging.cc
core/source/android/: AndroidOut.cpp  Renderer.cpp  Shader.cpp  TextureAsset.cpp  Utility.cpp  logging.cc  main.cpp
gradle/wrapper/: gradle-wrapper.properties
